[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/EscapeMenu/EscapeMenu.gd" type="Script" id=1]
[ext_resource path="res://global_theme.tres" type="Theme" id=2]

[node name="EscapeMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 174.0
margin_top = 75.0
margin_right = 330.0
margin_bottom = 213.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 9.0
margin_right = 146.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
margin_right = 136.0
margin_bottom = 37.0
text = "Back to game"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 41.0
margin_right = 136.0
margin_bottom = 78.0
text = "Settings"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 82.0
margin_right = 136.0
margin_bottom = 119.0
text = "Exit to menu"
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
